# Txt2Img2Haiku

./: .env  README.md  backend.env  docker-compose.yaml  initialize_data.py
backend/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml  pyproject.toml.bak
backend/qdrant_service/: config.py  image_searcher.py  searcher.py  service.py
data_init/: main.py  pyproject.toml
data_init/data_init/: config.py  download.py  embed.py  env.py  openimages_downloader.py  upload.py
frontend/: .env  Dockerfile  Dockerfile.tests  Dockerfile_local  frontend.local.env  package-lock.json  package.json
frontend/public/: favicon_about.txt  index.html  manifest.json
frontend/src/: App.jsx  config.js  icons.jsx  utils.js
frontend/src/components/: FlowerApp.jsx  HaikuDisplay.jsx  HaikuFinder.jsx  HaikuSearch.bak.jsx  HaikuSearch.jsx  ImgDisplay.jsx  QueryBuilder.jsx  SidebarFrame.jsx  VerticalLine.jsx
qdrant_init/: main.py  pyproject.toml
qdrant_init/cluster_preparation/: config.py  create_embeddings.py  initialize_cluster.py
