[tool.poetry]
name = "qdrant-service"
version = "0.1.0"
description = ""
authors = ["FatMadLad <mrammler@web.de>"]
readme = "README.md"
packages = [{include = "qdrant_service"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
qdrant-client = "^1.1.4"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
